--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,15 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<!--Bootstrap css-->
+		<title>Yu-Gi-Oh! Fan Portal</title>
+		<meta name="description" content="Entdecke die Welt von Yu-Gi-Oh! mit Karten, Strategien und mehr" />
+		<!-- bootstrap Nav Bar -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+	 <!-- bootstrap for caroussel -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" defer></script>
+	
 		%sveltekit.head%
 
 	</head>
